version 0.4.0 - dd-mmm-yyyy
 . Menu: added setOffsetX
 . MenuItem: renamed to MenuItemFont
 . MenuItem: added MenuItemImage
 . MenuItem: uses target/selector, not receiver/selector
 . MenuItem: MenuItemFont restore scale to 1.0 after being invoked (by Codemattic)

version 0.3.3 - 23-Ago-2008
 . Action: Added CallFuncND. Like CallFuncN but accepts data
 . CocosNode: actions can schedule actions [FIXED CRASH]
 . CocosNode: added default capacity to actions, children, & schedulers
 . CocosNode: relativeTrasnformAnchor is property
 . CocosNode: childrenAnchor removed (It wasn't working and it wasn't very useful)
 . CocosNode: negative z-order working
 . Demos: removed playgroud
 . Demos: added AnchorDemo
 . Demos: removed unused code from MenuTest
 . Demos: removed TcpAccelClient (deprecated)
 . Demos: AccelViewPort using VirtualAccelerometer
 . Director: fixed memory leak. First scene wasn't released
 . Director: fixed issue #6. Delta Time is never negative, and if a "Significant Time Change" is present, then DeltaTime will be 0.

version 0.3.2 - 14-Ago-2008
 . Action: Animate was using the wrong index. Possible crash fixed
 . ColorLayer: added support to change width & height at runtime
 . Demos: IntervalDemo using relative path for plist.info file
 . Demos: added filter to TcpAccelClient & Chipmunk_Accel demos (by Brian Hammond)
 . Director: propagates TouchEvents to all registered layers
 . Misc: Removed sound support. Not part of cocos2d
 . Misc: Moved OpenGLSupport inside the cocos2d directory. cocos2d.h includes OpenGLSupport headers
 . Misc: added getCocos2dVersion() function
 . Particles: It was (mistakenly) using Z coordinate
 . Sprite: added setDisplayFrame selector


version 0.3.1 - 30-Jul-2008
 . All: methods that receives target/selector, are named:Target selector (unified API)
 . All: added "cocos2d.h". applications should only import this file.
 . Demos: added resume/pause to application
 . Demos: chipmunk_accel is frame independent